bk_ida/bzip2ida/c1/BZ2_decompress
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1039:12: error: expected expression
*( _OWORD *)&s->save_gBase = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1039:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->save_gBase = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1040:12: error: expected expression
*( _OWORD *)&s->save_gMinlen = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1040:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->save_gMinlen = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1041:12: error: expected expression
*( _OWORD *)&s->save_zn = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1041:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->save_zn = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1042:12: error: expected expression
*( _OWORD *)&s->save_es = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1042:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->save_es = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1043:12: error: expected expression
*( _OWORD *)&s->save_groupPos = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1043:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->save_groupPos = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1044:12: error: expected expression
*( _OWORD *)&s->save_nGroups = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1044:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->save_nGroups = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1045:12: error: expected expression
*( _OWORD *)&s->save_i = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:1045:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->save_i = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2072:12: error: expected expression
*( _OWORD *)&s->inUse[240] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2072:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[240] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2073:12: error: expected expression
*( _OWORD *)&s->inUse[224] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2073:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[224] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2074:12: error: expected expression
*( _OWORD *)&s->inUse[208] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2074:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[208] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2075:12: error: expected expression
*( _OWORD *)&s->inUse[192] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2075:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[192] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2076:12: error: expected expression
*( _OWORD *)&s->inUse[176] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2076:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[176] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2077:12: error: expected expression
*( _OWORD *)&s->inUse[160] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2077:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[160] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2078:12: error: expected expression
*( _OWORD *)&s->inUse[144] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2078:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[144] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2079:12: error: expected expression
*( _OWORD *)&s->inUse[128] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2079:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[128] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2080:12: error: expected expression
*( _OWORD *)&s->inUse[112] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2080:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[112] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2081:12: error: expected expression
*( _OWORD *)&s->inUse[96] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2081:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[96] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2082:12: error: expected expression
*( _OWORD *)&s->inUse[80] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2082:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[80] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2083:12: error: expected expression
*( _OWORD *)&s->inUse[64] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2083:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[64] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2084:12: error: expected expression
*( _OWORD *)&s->inUse[48] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2084:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[48] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2085:12: error: expected expression
*( _OWORD *)&s->inUse[32] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2085:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[32] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2086:12: error: expected expression
*( _OWORD *)&s->inUse[16] = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2086:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&s->inUse[16] = 0LL; 
   ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2087:12: error: expected expression
*( _OWORD *)s->inUse = 0LL; 
           ^
/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/decompress.c:2087:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)s->inUse = 0LL; 
   ^
46 errors generated.
make: *** [/data/output_dir/patch/bzip2/ida/clang/O1/bzip2-clang-O1/BZ2_decompress/src/obj/decompress.o] Error 1
